--- a/main.css
+++ b/main.css
@@ -1,11 +1,31 @@
 body{
     padding: 1%;
     margin: 2%;
-    background: rgba(88, 146, 239, .45);
+    background: rgba(32, 81, 19, .45);
+}
+
+body h3{
+    color: white;
+    text-shadow: 3px 3px 5px black;
+}
+
+img{
+    border: 1px solid black;
+}
+
+p{
+    color: white;
+    text-shadow: 1px 1px 4px black;
 }
 
 footer{
     text-align: center;
+}
+
+header h1,h2{
+    text-align: center;
+    color: white;
+    text-shadow: 1px 1px 4px black;
 }
 
 html{
@@ -16,6 +36,11 @@ li{
     color: white;
 }
 
+a{
+    color: white;
+    text-shadow: 1px 1px 4px black;
+}
+
 .answer {
     list-style-type: none;
     text-indent: 30px;
@@ -23,17 +48,7 @@ li{
 
 .question{
     list-style-type: square;
-}
-
-.top{
-    text-align: center;
-    color: white;
-    text-shadow: 1px 1px 4px black;
-}
-
-a{
-    color: white;
-    text-shadow: 1px 1px 4px black;
+    text-shadow: 2px 2px 4px black;
 }
 
 #lastList{
