--- a/csszen/mystyleone.css
+++ b/csszen/mystyleone.css
@@ -5,25 +5,27 @@ html {
 body {
     font: 75% georgia, sans-serif;
     line-height: 1.88889;
-    color: #555753;
-    background: #fff url(http://csszengarden.com/001/blossoms.jpg) no-repeat bottom right;
-    margin: 0;
-    padding: 0;
+    color: deepskyblue;
+    background: lightblue no-repeat bottom right;
+    margin: 4%;
+    padding: 3%;
 }
 p {
     margin-top: 0;
-    text-align: justify;
+    text-align: start;
 }
 h3 {
-    font: italic normal 1.4em georgia, sans-serif;
-    letter-spacing: 1px;
-    margin-bottom: 0;
-    color: #7D775C;
+    font-family: "Comic Sans MS";
+    font-weight: bolder;
+    letter-spacing: 4px;
+    margin-bottom: 5px;
+    color: black;
 }
 a:link {
     font-weight: bold;
     text-decoration: none;
-    color: #B7A5DF;
+    color: greenyellow;
+    background: #0d4b0c;
 }
 a:visited {
     font-weight: bold;
@@ -32,16 +34,17 @@ a:visited {
 }
 a:hover, a:focus, a:active {
     text-decoration: underline;
-    color: #9685BA;
+    color: fuchsia;
 }
 abbr {
-    border-bottom: none;
+    border-bottom: dashed;
+    background: border-box;
 }
 
 
 /* specific divs */
 .page-wrapper {
-    background: url(http://csszengarden.com/001/zen-bg.jpg) no-repeat top left;
+    background:#c21d25 repeat-x bottom center;
     padding: 0 175px 0 110px;
     margin: 0;
     position: relative;
@@ -49,8 +52,10 @@ abbr {
 
 .intro {
     min-width: 470px;
-    width: 100%;
+    width: 40%;
+    background: rgba(155, 31, 141, .7);
 }
+
 
 header h1 {
     background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
@@ -58,16 +63,15 @@ header h1 {
     display: block;
     width: 219px;
     height: 87px;
-    float: left;
+    float: right;
 
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
 }
 header h2 {
-    background: transparent url(http://csszengarden.com/001/h2.gif) no-repeat top left;
-    margin-top: 58px;
-    margin-bottom: 40px;
+    background: transparent url(http://csszengarden.com/001/h2.gif) repeat-y top left;
+    margin: 20px;
     width: 200px;
     height: 18px;
     float: right;
@@ -111,12 +115,13 @@ footer a:link, footer a:visited {
 .sidebar {
     margin-left: 600px;
     position: absolute;
+    float: left;
     top: 0;
     right: 0;
 }
 .sidebar .wrapper {
     font: 10px verdana, sans-serif;
-    background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y;
+    background: rgba(173, 166, 172, .8);
     padding: 10px;
     margin-top: 150px;
     width: 130px;
@@ -154,30 +159,33 @@ footer a:link, footer a:visited {
 
 
 .sidebar ul {
+    list-style: georgian;
     margin: 0;
     padding: 0;
 }
 .sidebar li {
+    list-style-type: circle;
     line-height: 1.3em;
-    background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center;
     display: inline-table;
     padding-top: 3%;
     margin-bottom: 3%;
     list-style-type: georgian;
 }
 .sidebar li a:link {
-    color: rgba(53,109,198, 1);
+    color: lightgreen;
 }
 .sidebar li a:visited {
-    color: purple;
+    color: greenyellow;
 }
 
 
 .extra1 {
-    background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat;
+    background: transparent url(https://static.pexels.com/photos/326162/pexels-photo-326162.jpeg) top left no-repeat;
     position: absolute;
+    background-size: 100%;
+    float: left;
     top: 40px;
-    right: 0;
-    width: 148px;
-    height: 110px;
+    right: 30px;
+    width: 30%;
+    height: 30%;
 }
