--- a/csszen/mystyleone.css
+++ b/csszen/mystyleone.css
@@ -4,16 +4,13 @@ html {
 }
 body {
     font: 75% georgia, sans-serif;
-    line-height: 1.88889;
+    line-height: 2;
     color: deepskyblue;
     background: lightblue no-repeat bottom right;
     margin: 4%;
     padding: 3%;
 }
-p {
-    margin-top: 0;
-    text-align: start;
-}
+
 h3 {
     font-family: "Comic Sans MS";
     font-weight: bolder;
@@ -29,7 +26,7 @@ a:link {
 }
 a:visited {
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: blink;
     color: #D4CDDC;
 }
 a:hover, a:focus, a:active {
@@ -40,8 +37,6 @@ abbr {
     border-bottom: dashed;
     background: border-box;
 }
-
-
 /* specific divs */
 .page-wrapper {
     background:#c21d25 repeat-x bottom center;
@@ -55,45 +50,21 @@ abbr {
     width: 40%;
     background: rgba(155, 31, 141, .7);
 }
-
-
-header h1 {
-    background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
-    margin-top: 10px;
-    display: block;
-    width: 219px;
-    height: 87px;
+.intro h1{
+    font-family: Bahnschrift;
+    font-size: x-large;
+    background-color: #988F5E;
     float: right;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
 }
-header h2 {
-    background: transparent url(http://csszengarden.com/001/h2.gif) repeat-y top left;
-    margin: 20px;
-    width: 200px;
-    height: 18px;
-    float: right;
 
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-header {
-    padding-top: 20px;
-    height: 87px;
+.intro h2{
+    font-family: Broadway;
+    font-size: 500%
 }
 
 .summary {
-    clear: both;
-    margin: 20px 20px 20px 10px;
     width: 160px;
     float: left;
-}
-.summary p {
-    font: italic 1.1em/2.2 georgia;
-    text-align: center;
 }
 
 .preamble {
@@ -103,6 +74,7 @@ header {
 .supporting {
     padding-left: 10px;
     margin-bottom: 40px;
+    margin-top: 30px;
 }
 
 footer {
@@ -113,12 +85,19 @@ footer a:link, footer a:visited {
 }
 
 .sidebar {
+    margin-top: 55%;
     margin-left: 600px;
     position: absolute;
     float: left;
+    list-style-type: circle;
     top: 0;
     right: 0;
 }
+
+.sidebar div:hover{
+    background-color: #0d4b0c;
+}
+
 .sidebar .wrapper {
     font: 10px verdana, sans-serif;
     background: rgba(173, 166, 172, .8);
@@ -126,45 +105,8 @@ footer a:link, footer a:visited {
     margin-top: 150px;
     width: 130px;
 }
-.sidebar h3.select {
-    background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left;
-    margin: 10px 0 5px 0;
-    width: 97px;
-    height: 16px;
 
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.sidebar h3.archives {
-    background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left;
-    margin: 25px 0 5px 0;
-    width:57px;
-    height: 14px;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.sidebar h3.resources {
-    background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left;
-    margin: 25px 0 5px 0;
-    width:63px;
-    height: 10px;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-
-.sidebar ul {
-    list-style: georgian;
-    margin: 0;
-    padding: 0;
-}
 .sidebar li {
-    list-style-type: circle;
     line-height: 1.3em;
     display: inline-table;
     padding-top: 3%;
@@ -177,15 +119,35 @@ footer a:link, footer a:visited {
 .sidebar li a:visited {
     color: greenyellow;
 }
+.sidebar .zen-resources div:hover{
+    zoom: 20%;
+}
+.explanation{
+    background-color: darkslategrey;
+    border-color: black;
+}
 
+.participation{
+    background-color: #9685BA;
+    border-color: black;
+}
+.benefits{
+    font-kerning: normal;
+    border-color: black;
+    background-color: chocolate;
+}
 
+.requirements{
+    background-position: center;
+    background-color: olive;
+}
 .extra1 {
     background: transparent url(https://static.pexels.com/photos/326162/pexels-photo-326162.jpeg) top left no-repeat;
     position: absolute;
     background-size: 100%;
     float: left;
-    top: 40px;
-    right: 30px;
+    top: 10px;
+    right: 10px;
     width: 30%;
     height: 30%;
 }
