--- a/csszen/mystyletwo.css
+++ b/csszen/mystyletwo.css
@@ -1,183 +1,151 @@
-html {
-    margin: 0;
-    padding: 0;
+body{
+    background-color: cadetblue;
 }
-body {
-    font: 75% georgia, sans-serif;
-    line-height: 1.88889;
-    color: #555753;
-    background: #fff url(http://csszengarden.com/001/blossoms.jpg) no-repeat bottom right;
-    margin: 0;
-    padding: 0;
-}
-p {
-    margin-top: 0;
-    text-align: justify;
-}
-h3 {
-    font: italic normal 1.4em georgia, sans-serif;
-    letter-spacing: 1px;
-    margin-bottom: 0;
-    color: #7D775C;
-}
-a:link {
-    font-weight: bold;
-    text-decoration: none;
-    color: #B7A5DF;
-}
-a:visited {
-    font-weight: bold;
-    text-decoration: none;
-    color: #D4CDDC;
-}
-a:hover, a:focus, a:active {
-    text-decoration: underline;
-    color: #9685BA;
-}
-abbr {
-    border-bottom: none;
-}
-
-
-/* specific divs */
-.page-wrapper {
-    background: url(http://csszengarden.com/001/zen-bg.jpg) no-repeat top left;
-    padding: 0 175px 0 110px;
-    margin: 0;
-    position: relative;
-}
-
-.intro {
-    min-width: 470px;
-    width: 100%;
-}
-
-header h1 {
-    background: transparent url(http://csszengarden.com/001/h1.gif) no-repeat top left;
-    margin-top: 10px;
-    display: block;
-    width: 219px;
-    height: 87px;
-    float: left;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-header h2 {
-    background: transparent url(http://csszengarden.com/001/h2.gif) no-repeat top left;
-    margin-top: 58px;
-    margin-bottom: 40px;
-    width: 200px;
-    height: 18px;
-    float: right;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-header {
-    padding-top: 20px;
-    height: 87px;
-}
-
-.summary {
-    clear: both;
-    margin: 20px 20px 20px 10px;
-    width: 160px;
-    float: left;
-}
-.summary p {
-    font: italic 1.1em/2.2 georgia;
+.intro{
+    border-color: #9685BA;
     text-align: center;
 }
 
-.preamble {
-    clear: right;
-    padding: 0px 10px 0 10px;
-}
-.supporting {
-    padding-left: 10px;
-    margin-bottom: 40px;
+.intro h1{
+    color: midnightblue;
+    border-color: #9685BA;
+    background-color: #9685BA;
+    border-style: solid;
+    font-family: Castellar;
+    border-radius: 30%;
 }
 
-footer {
+.intro h2{
+    color: black;
+    border-style: solid;
+    border-color: lightgray;
+    background-color: lightgray;
+    border-radius: 20%;
+}
+
+.explanation{
+    padding: 3px;
+    border-style: solid;
+    border-color: black;
+}
+.explanation h3{
+    text-color: midnightblue;
+    text-shadow: 1px 1px black;
+    text-align: right;
+}
+
+.explanation p{
+    text-align: right;
+}
+
+.participation{
+    padding: 3px;
+    border-style: solid;
+    border-color: black;
+}
+.participation h3{
+    text-color: midnightblue;
+    text-shadow: 1px 1px black;
+    text-align: right;
+}
+
+.participation p{
+    text-align: right;
+}
+
+.participation{
+    padding: 3px;
+    border-style: solid;
+    border-color: black;
+}
+
+.benefits{
+    padding: 3px;
+    border-color: black;
+    border-style: solid;
+}
+.benefits h3{
+    text-align: right;
+    text-color: midnightblue;
+    text-shadow: 1px 1px black;
+}
+
+.benefits p{
+    text-align: right;
+}
+
+.requirements{
+    border-style: solid;
+    border-color: black;
+    padding: 3px;
+}
+.requirements h3{
+    text-align: right;
+    text-color: midnightblue;
+    text-shadow: 1px 1px black;
+}
+
+.requirements p{
+    text-align: right;
+}
+
+.zen-resources{
     text-align: center;
 }
-footer a:link, footer a:visited {
-    margin-right: 20px;
-}
 
-.sidebar {
-    margin-left: 600px;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.sidebar .wrapper {
-    font: 10px verdana, sans-serif;
-    background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y;
-    padding: 10px;
-    margin-top: 150px;
-    width: 130px;
-}
-.sidebar h3.select {
-    background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left;
-    margin: 10px 0 5px 0;
-    width: 97px;
-    height: 16px;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.sidebar h3.archives {
-    background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left;
-    margin: 25px 0 5px 0;
-    width:57px;
-    height: 14px;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.sidebar h3.resources {
-    background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left;
-    margin: 25px 0 5px 0;
-    width:63px;
-    height: 10px;
-
-    text-indent: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-
-.sidebar ul {
-    margin: 0;
-    padding: 0;
-}
-.sidebar li {
-    line-height: 1.3em;
-    background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center;
-    display: block;
-    padding-top: 5px;
-    margin-bottom: 5px;
+.zen-resources ul{
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
-}
-.sidebar li a:link {
-    color: #988F5E;
-}
-.sidebar li a:visited {
-    color: #B3AE94;
+    text-align: center;
 }
 
+.zen-resources li{
+    margin: 1px;
+    padding: 1px;
+    text-align: center;
+    background-color: #9685BA;
+}
 
-.extra1 {
-    background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat;
-    position: absolute;
-    top: 40px;
-    right: 0;
-    width: 148px;
-    height: 110px;
+.design-archives h3{
+    text-align: left;
+}
+
+.design-archives ul{
+    display: flex;
+    list-style: none;
+    text-align: left;
+    flex-direction: column;
+}
+
+.design-archives li{
+    text-align: left;
+}
+
+.design-archives{
+    float: left;
+}
+
+.design-archives{
+    float: left;
+}
+
+.design-selection{
+    float: right;
+}
+
+.design-selection h3{
+    text-align: right;
+    text-color: purple;
+}
+
+.design-selection ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+
+.sidebar{
+    justify-content: center;
 }
